# python_like_cpp

./: .gitignore  CMakeLists.txt  README.md  pyl_basic_types.h  pyl_child_ptr.h  pyl_object_interface.h  pyl_ranges.h  pyl_strong_num.h  pyl_text.cpp  pyl_text.h
tests/: test_pyl_basic_types.cpp  test_pyl_child_ptr.cpp  test_pyl_ranges.cpp  test_pyl_strong_num.cpp  test_pyl_text.cpp
